Minor code-style corrections.
	modified:   idas.chox.core/src/main/java/idas/chox/core/hpi/Hpi.java
	modified:   idas.chox.core/src/main/java/idas/chox/core/model/AuditEntry.java
	modified:   idas.chox.core/src/main/java/idas/chox/core/model/Entity.java
	modified:   idas.chox.core/src/main/java/idas/chox/core/util/FileHelper.java
	modified:   idas.chox.data/src/main/java/idas/chox/data/services/FullAuditServiceImpl.java
	modified:   idas.chox.service/src/main/java/idas/chox/service/bre/util/ClaimCalcHelper.java
	renamed:    idas.chox.service/src/main/java/idas/chox/service/bre/util/mathHelper.java -> idas.chox.service/src/main/java/idas/chox/service/bre/util/MathHelper.java
	modified:   idas.chox.web/src/main/java/idas/chox/web/BigDecimalConverter.java
	modified:   idas.chox.web/src/main/java/idas/chox/web/actions/BillingAction.java
	modified:   idas.chox.web/src/main/java/idas/chox/web/actions/XmlUploadAction.java
	modified:   idas.chox.web/src/main/java/idas/chox/web/scheduler/DbSchedulerJob.java